clang/test/CXX/over/over.match/over.match.best/over.best.ics/over.ics.user/p3-0x.cpp
// RUN: %clang_cc1 -fsyntax-only -std=c++0x -verify %s

namespace PR6285 {
  template<typename T> struct identity 
  { typedef T type; };

  struct D { 
    template<typename T = short> 
    operator typename identity<T>::type(); // expected-note{{candidate}}
  }; 

  int f() { return D(); } // expected-error{{no viable conversion}}
}

